welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
var a=0
	
	for (k <- 0 to nums.lenght-1) {
		if (nums(k) == 1) a=1
		if (nums(k) == 2) b=1
		if (nums(k) == 3 ) c=1
	}
	if (a==b && b==c && c==1) return true
	else return false
}